--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,4 +90,4 @@ build_and_push_to_docker_hub:
           # Для каждого пересобранного образа 
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
-          tags: ваш-логин-н-docker-hub/taski_backend:latest
+          tags: mielik/taski_backend:latest
