--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -174,4 +174,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен!send_message:
+        message: Деплой успешно выполнен!
